--- a/wishlist.html
+++ b/wishlist.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container">
-        <div class="menu"><a href="index.html" class="active">Home</a><a href="wishlist.html">Wishlist</a></div>
+        <div class="menu"><a href="index.html">Home</a><a href="wishlist.html"  class="active">Wishlist</a></div>
         <h1>Products</h1>
         <input class="search" placeholder="Price filter.." />      
         <div class="product-container"><div class="loader"></div></div>     
